# wfeusk

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  bench.sh  bitbucket-pipelines.yml  pgo-bench.sh  pgo-build.sh  rustfmt.toml  wfeusk.rc
wfeusk/: Cargo.toml
wfeusk/benches/: my_benchmark.rs
wfeusk/examples/: bench.rs  demo.rs
wfeusk/src/: arguments.rs  board.rs  lib.rs  main.rs  tile.rs  util.rs  wordlist.rs  wordlist_test.rs
wfeusk/src/letters/: mod.rs  points.rs
wfeusk/src/matcher/: mod.rs  state.rs
