[package]
name = "wfeusk"
version = "0.1.0"
edition = "2021"

[dependencies]
libdawg = "1.0.0"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"
smallvec = { version = "1.15", features = [
    "union",
    "const_generics",
    "const_new",
] }
typed-arena = "2.0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
